crates/tracel-mlir-rs/src/dialect/snapshots/tracel_mlir_rs__dialect__index__tests__index.cmp.snap
---
source: crates/tracel-mlir-rs/src/dialect/index.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: index, %arg1: index) -> i1 {
    %0 = index.cmp eq(%arg0, %arg1)
    return %0 : i1
  }
}
