crates/tracel-mlir-rs/src/dialect/snapshots/tracel_mlir_rs__dialect__index__tests__index.constant.snap
---
source: crates/tracel-mlir-rs/src/dialect/index.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: index) -> index {
    %idx42 = index.constant 42
    return %idx42 : index
  }
}
